--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -22,7 +22,8 @@
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      	<ul class="nav navbar-nav">
 					<li><a href="{{pathFor 'about'}}">About</a></li>
-					<li><a href="{{pathFor 'chat'}}">Chat</a></li>
+					<li><a href="{{pathFor 'event'}}">Events</a></li>
+					<li><a href="{{pathFor 'feedback'}}">Feedback</a></li>
 				</ul>			
 
 				<ul class="nav navbar-nav navbar-right">
