--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -24,6 +24,7 @@
 					<li><a href="{{pathFor 'about'}}">About</a></li>
 					<li><a href="{{pathFor 'event'}}">Events</a></li>
 					<li><a href="{{pathFor 'feedback'}}">Feedback</a></li>
+					<li><a href="{{pathFor 'party'}}">Parties</a></li>
 				</ul>			
 
 				<ul class="nav navbar-nav navbar-right">
