--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -23,7 +23,7 @@
 		      	<ul class="nav navbar-nav">
 		      		<li><a href="{{pathFor 'welcome'}}">Home</a></li>
 					<li><a href="{{pathFor 'about'}}">About</a></li>
-					<li><a href="{{pathFor 'event'}}">Events</a></li>
+					<li><a href="{{pathFor 'event'}}"><i class="fa fa-calendar"></i> Events</a></li>
 					<li><a href="{{pathFor 'feedback'}}">Feedback</a></li>
 					<li><a href="{{pathFor 'party'}}">Parties</a></li>
 				</ul>			
