--- a/client/layout/layout.css
+++ b/client/layout/layout.css
@@ -1,5 +1,5 @@
 body{
-	background-image:url("http://www.citi.io/wp-content/uploads/2015/08/1168-00-06.jpg"); 
+	background:white;
 	background-repeat: top right;
 }
 h1 {
