--- a/client/layout/layout.css
+++ b/client/layout/layout.css
@@ -5,3 +5,13 @@ body{
 h1 {
 	font-style: Fantansy 40px
 }
+.input-group {
+	padding-top: 5px;
+}
+.details {
+	color: #777;
+	font-size: 12px;
+}
+.container {
+	padding-top: 15px;
+}
