--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -21,11 +21,11 @@
 		    <!-- Collect the nav links, forms, and other content for toggling -->
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      	<ul class="nav navbar-nav">
-		      		<li><a href="{{pathFor 'welcome'}}">Home</a></li>
-					<li><a href="{{pathFor 'about'}}">About</a></li>
-					<li><a href="{{pathFor 'event'}}"><i class="fa fa-calendar"></i> Events</a></li>
-					<li><a href="{{pathFor 'feedback'}}">Feedback</a></li>
-					<li><a href="{{pathFor 'party'}}">Parties</a></li>
+		      		<li><a href="{{pathFor 'welcome'}}"><i class="fa fa-home"></i> Home</a></li>
+					<li><a href="{{pathFor 'about'}}"><i class="fa fa-info"></i> About</a></li>
+					<li><a href="{{pathFor 'events'}}"><i class="fa fa-calendar"></i> Events</a></li>
+					<li><a href="{{pathFor 'feedback'}}"><i class="fa fa-commenting-o"></i> Feedback</a></li>
+					<li><a href="{{pathFor 'party'}}"><i class="fa fa-glass"></i> Parties</a></li>
 				</ul>			
 
 				<ul class="nav navbar-nav navbar-right">
