--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -1,8 +1,6 @@
 
 <template name="layout">
-	<div class="container">
-		<h1 class="text-center"> So'Deis</h1>
-		
+	<div class="container">		
 		<!-- Here is the standard Bootstrap code for a Navigation bar taken directly from getbootstrap.com/components -->
 		<nav class="navbar navbar-default">
 		  <div class="container-fluid">
@@ -21,7 +19,7 @@
 		    <!-- Collect the nav links, forms, and other content for toggling -->
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      	<ul class="nav navbar-nav">
-		      		<li><a href="{{pathFor 'welcome'}}"><i class="fa fa-home"></i> Home</a></li>
+		      		<li><a href="{{pathFor 'welcome'}}"><i class="fa fa-home"></i> So'Deis</a></li>
 					<li><a href="{{pathFor 'about'}}"><i class="fa fa-info"></i> About</a></li>
 					<li><a href="{{pathFor 'events'}}"><i class="fa fa-calendar"></i> Events</a></li>
 					<li><a href="{{pathFor 'feedback'}}"><i class="fa fa-commenting-o"></i> Feedback</a></li>
