--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -22,7 +22,7 @@
 		      		<li><a href="{{pathFor 'welcome'}}"><i class="fa fa-home"></i> So'Deis</a></li>
 					<li><a href="{{pathFor 'about'}}"><i class="fa fa-info"></i> About</a></li>
 					<li><a href="{{pathFor 'events'}}"><i class="fa fa-calendar"></i> Events</a></li>
-					<li><a href="{{pathFor 'feedback'}}"><i class="fa fa-commenting-o"></i> Feedback</a></li>
+					<li><a href="{{pathFor 'feedbackPage'}}"><i class="fa fa-commenting-o"></i> Feedback</a></li>
 					<li><a href="{{pathFor 'party'}}"><i class="fa fa-glass"></i> Parties</a></li>
 				</ul>			
 
