--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -12,6 +12,7 @@
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
 		      </button>
 		     
 		    </div>
@@ -23,6 +24,7 @@
 					<li><a href="{{pathFor 'about'}}"><i class="fa fa-info"></i> About</a></li>
 					<li><a href="{{pathFor 'events'}}"><i class="fa fa-calendar"></i> Events</a></li>
 					<li><a href="{{pathFor 'feedbackPage'}}"><i class="fa fa-commenting-o"></i> Feedback</a></li>
+					<li><a href="{{pathFor 'map'}}"><i class="fa fa-map"></i> Map</a></li>
 				</ul>			
 
 				<ul class="nav navbar-nav navbar-right">
