--- a/client/layout/layout.css
+++ b/client/layout/layout.css
@@ -1,5 +1,7 @@
 body{
-	background:white;
+	 background-image: url("https://upload.wikimedia.org0
+		/wikipedia/commons/d/d1/Brick_wall_close-up_view.jpg");
+    background-repeat: repeat-x;
 	background-repeat: top right;
 }
 h1 {
