--- a/client/layout/layout.css
+++ b/client/layout/layout.css
@@ -1,6 +1,5 @@
 body{
-	 background-image: url("https://upload.wikimedia.org0
-		/wikipedia/commons/d/d1/Brick_wall_close-up_view.jpg");
+	 background:lightblue;
     background-repeat: repeat-x;
 	background-repeat: top right;
 }
@@ -17,3 +16,4 @@ h1 {
 .container {
 	padding-top: 15px;
 }
+
