--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -1,6 +1,6 @@
 
 <template name="layout">
-	<div class="container">		
+	<div id="b" class="container">		
 		<!-- Here is the standard Bootstrap code for a Navigation bar taken directly from getbootstrap.com/components -->
 		<nav class="navbar navbar-default">
 		  <div class="container-fluid">
