Removed the file Richard created

--- a/client/layout/layout.css
+++ b/client/layout/layout.css
@@ -1,5 +1,5 @@
 body{
-	 background-image: url("https://upload.wikimedia.org/wikipedia/commons/f/f9/The_Burning_Sky.JPG"); ;
+	 background-image: url("https://upload.wikimedia.org/wikipedia/commons/f/f9/The_Burning_Sky.JPG"); 
     background-repeat: repeat-x;
 	background-repeat: top right;
 }
